tests/expectations/compiler/integers/u8/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'u8'
    --> compiler-test:4:19
     |
   4 |         let i = 1 u8;
     |                   ^^
